crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-exception_DOC502_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC502_google.py:16:1: DOC502 (docstring-extraneous-exception) Raised exception is not explicitly raised: `FasterThanLightError`
   |
14 |           Speed as distance divided by time.
15 |   
16 | /     Raises:
17 | |         FasterThanLightError: If speed is greater than the speed of light.
18 | |     """
   | |____^ DOC502 (docstring-extraneous-exception)
19 |       return distance / time
   |
   = help: Remove `FasterThanLightError` from the docstring

DOC502_google.py:33:1: DOC502 (docstring-extraneous-exception) Raised exceptions are not explicitly raised: `FasterThanLightError`, `DivisionByZero`
   |
31 |           Speed as distance divided by time.
32 |   
33 | /     Raises:
34 | |         FasterThanLightError: If speed is greater than the speed of light.
35 | |         DivisionByZero: Divide by zero.
36 | |     """
   | |____^ DOC502 (docstring-extraneous-exception)
37 |       return distance / time
   |
   = help: Remove `FasterThanLightError`, `DivisionByZero` from the docstring

DOC502_google.py:51:1: DOC502 (docstring-extraneous-exception) Raised exception is not explicitly raised: `DivisionByZero`
   |
49 |           Speed as distance divided by time.
50 |   
51 | /     Raises:
52 | |         FasterThanLightError: If speed is greater than the speed of light.
53 | |         DivisionByZero: Divide by zero.
54 | |     """
   | |____^ DOC502 (docstring-extraneous-exception)
55 |       try:
56 |           return distance / time
   |
   = help: Remove `DivisionByZero` from the docstring
