crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-returns_DOC202_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC202_google.py:20:1: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
18 |           num (int): A number
19 |   
20 | /     Returns:
21 | |         str: A string
22 | |     """
   | |____^ DOC202 (docstring-extraneous-returns)
23 |       print('test')
   |
   = help: Remove the "Returns" section

DOC202_google.py:36:1: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
34 |               num (int): A number
35 |   
36 | /         Returns:
37 | |             str: A string
38 | |         """
   | |________^ DOC202 (docstring-extraneous-returns)
39 |           print('test')
   |
   = help: Remove the "Returns" section
