crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-returns_DOC202_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC202_numpy.py:24:1: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
22 |           A number
23 |   
24 | /     Returns
25 | |     -------
26 | |     str
27 | |         A string
28 | |     """
   | |____^ DOC202 (docstring-extraneous-returns)
29 |       print('test')
   |
   = help: Remove the "Returns" section

DOC202_numpy.py:44:1: DOC202 (docstring-extraneous-returns) Docstring should not have a returns section because the function doesn't return anything
   |
42 |               A number
43 |   
44 | /         Returns
45 | |         -------
46 | |         str
47 | |             A string
48 | |         """
   | |________^ DOC202 (docstring-extraneous-returns)
49 |           print('test')
   |
   = help: Remove the "Returns" section
