crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-extraneous-yields_DOC403_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC403_google.py:20:1: DOC403 (docstring-extraneous-yields) Docstring has a "Yields" section but the function doesn't yield anything
   |
18 |           num (int): A number
19 |   
20 | /     Yields:
21 | |         str: A string
22 | |     """
   | |____^ DOC403 (docstring-extraneous-yields)
23 |       print('test')
   |
   = help: Remove the "Yields" section

DOC403_google.py:36:1: DOC403 (docstring-extraneous-yields) Docstring has a "Yields" section but the function doesn't yield anything
   |
34 |               num (int): A number
35 |   
36 | /         Yields:
37 | |             str: A string
38 | |         """
   | |________^ DOC403 (docstring-extraneous-yields)
39 |           print('test')
   |
   = help: Remove the "Yields" section
