crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-returns_DOC201_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC201_google.py:9:5: DOC201 (docstring-missing-returns) `return` is not documented in docstring
  |
7 |         num (int): A number
8 |     """
9 |     return 'test'
  |     ^^^^^^^^^^^^^ DOC201 (docstring-missing-returns)
  |
  = help: Add a "Returns" section to the docstring

DOC201_google.py:50:9: DOC201 (docstring-missing-returns) `return` is not documented in docstring
   |
48 |             num (int): A number
49 |         """
50 |         return 'test'
   |         ^^^^^^^^^^^^^ DOC201 (docstring-missing-returns)
   |
   = help: Add a "Returns" section to the docstring

DOC201_google.py:71:9: DOC201 (docstring-missing-returns) `return` is not documented in docstring
   |
69 |     def nested():
70 |         """Do something nested."""
71 |         return 5
   |         ^^^^^^^^ DOC201 (docstring-missing-returns)
72 | 
73 |     print("I never return")
   |
   = help: Add a "Returns" section to the docstring

DOC201_google.py:121:9: DOC201 (docstring-missing-returns) `return` is not documented in docstring
    |
119 |     def f(self):
120 |         """Lorem ipsum."""
121 |         return True
    |         ^^^^^^^^^^^ DOC201 (docstring-missing-returns)
    |
    = help: Add a "Returns" section to the docstring
