crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-returns_DOC201_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC201_numpy.py:11:5: DOC201 (docstring-missing-returns) `return` is not documented in docstring
   |
 9 |         A number
10 |     """
11 |     return 'test'
   |     ^^^^^^^^^^^^^ DOC201 (docstring-missing-returns)
   |
   = help: Add a "Returns" section to the docstring

DOC201_numpy.py:62:9: DOC201 (docstring-missing-returns) `return` is not documented in docstring
   |
60 |             A number
61 |         """
62 |         return 'test'
   |         ^^^^^^^^^^^^^ DOC201 (docstring-missing-returns)
   |
   = help: Add a "Returns" section to the docstring

DOC201_numpy.py:87:9: DOC201 (docstring-missing-returns) `return` is not documented in docstring
   |
85 |     def f(self):
86 |         """Lorem ipsum."""
87 |         return True
   |         ^^^^^^^^^^^ DOC201 (docstring-missing-returns)
   |
   = help: Add a "Returns" section to the docstring
