crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-yields_DOC402_google.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC402_google.py:9:5: DOC402 (docstring-missing-yields) `yield` is not documented in docstring
  |
7 |         num (int): A number
8 |     """
9 |     yield 'test'
  |     ^^^^^^^^^^^^ DOC402 (docstring-missing-yields)
  |
  = help: Add a "Yields" section to the docstring

DOC402_google.py:50:9: DOC402 (docstring-missing-yields) `yield` is not documented in docstring
   |
48 |             num (int): A number
49 |         """
50 |         yield 'test'
   |         ^^^^^^^^^^^^ DOC402 (docstring-missing-yields)
   |
   = help: Add a "Yields" section to the docstring

DOC402_google.py:59:9: DOC402 (docstring-missing-yields) `yield` is not documented in docstring
   |
57 |     def nested():
58 |         """Do something nested."""
59 |         yield 5
   |         ^^^^^^^ DOC402 (docstring-missing-yields)
60 | 
61 |     print("I never yield")
   |
   = help: Add a "Yields" section to the docstring

DOC402_google.py:67:5: DOC402 (docstring-missing-yields) `yield` is not documented in docstring
   |
65 | def test():
66 |     """Do something."""
67 |     yield from range(10)
   |     ^^^^^^^^^^^^^^^^^^^^ DOC402 (docstring-missing-yields)
   |
   = help: Add a "Yields" section to the docstring
