crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-yields_DOC402_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC402_numpy.py:11:5: DOC402 (docstring-missing-yields) `yield` is not documented in docstring
   |
 9 |         A number
10 |     """
11 |     yield 'test'
   |     ^^^^^^^^^^^^ DOC402 (docstring-missing-yields)
   |
   = help: Add a "Yields" section to the docstring

DOC402_numpy.py:62:9: DOC402 (docstring-missing-yields) `yield` is not documented in docstring
   |
60 |             A number
61 |         """
62 |         yield 'test'
   |         ^^^^^^^^^^^^ DOC402 (docstring-missing-yields)
   |
   = help: Add a "Yields" section to the docstring
